iks-workshop/security/demo-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liberty
  labels:
    app: cordoned
spec:
  containers:
  - name: liberty
    image: registry.ng.bluemix.net/ibmliberty
    ports:
    - containerPort: 9080
    
---
    
apiVersion: v1
kind: Pod
metadata:
  name: uncordoned
  labels:
    app: uncordoned
spec:
  containers:
  - name: uncordoned
    image: golang
    command: ["/bin/sh", "-c"]
    args:
      - >
        while true; do
          sleep 100000;
        done
